--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@ body {
     min-height: 92px;
     max-height: 290px;
     height: calc(100% - 560px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-box {
@@ -37,6 +40,12 @@ body {
     /* width: 100%; */
     padding: 5px 8px 0 14px;
 
+}
+
+#logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #search-form {
