--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,9 @@ body {
     justify-content: flex-end;
     align-items: center;
     height: 60px;
+    width: 100%;
     padding: 6px;
+    
 }
 
 .img-box {
@@ -20,8 +22,8 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 92px;
-    max-height: 290px;
-    height: calc(100% - 560px); 
+    height: 130px;
+    /* height: calc(100% - 560px);  */
 }
 
 .main-box {
@@ -31,15 +33,22 @@ body {
 }
 
 .page-links {
-    padding: 20px;
-    background-color: #f8f9fa;
-    border: 1px solid #f8f9fa;
-    border-radius: 4px;
     
-    color: #3c4043;
-
+    height: 36px;
+    min-width: 54px;
+    margin: 11px 4px;
+    padding: 15px;
+    border-radius: 4px;
+    color: rgba(0,0,0,.87);
+    text-align: center;
+    vertical-align: middle;
+    line-height: 200%;
     font-family: arial,sans-serif;
     text-decoration: none;
+}
+
+.page-links:hover {
+    text-decoration: underline;
 }
 
 .search-box {
@@ -49,6 +58,9 @@ body {
 
     height: 44px; 
     max-height: 160px;
+    /* width:auto; */
+    width: 584px;
+
     border-radius: 24px 0% 0% 24px;    
     font-size: 16px;
     height: 100%;
@@ -74,6 +86,7 @@ body {
 
 #search-bar {
     height: 44px;
+    width: 100%;
     border: 1px solid grey;
     border-right: 0;
     border-radius: 24px 0% 0% 24px;    
@@ -81,7 +94,6 @@ body {
     padding-left: 40px;
     padding-right: 40px;
 
-    /* width: auto; */
 }
 
 #submit-button {
